--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bootstrap": "^5.2.3",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
+    "mongoose": "^7.1.0",
     "socket.io": "^4.6.1"
   }
 }
