--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
   "homepage": "https://github.com/Marcelo-gil/Backend#readme",
   "dependencies": {
     "bootstrap": "^5.2.3",
+    "connect-mongo": "^5.0.0",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
     "mongoose": "^7.1.0",
     "mongoose-paginate-v2": "^1.7.1",
+    "session-file-store": "^1.5.0",
     "socket.io": "^4.6.1"
   }
 }
