--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "commander": "^10.0.1",
     "connect-mongo": "^5.0.0",
     "cookie-parser": "^1.4.6",
-    "dotenv": "^16.1.4",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
     "jsonwebtoken": "^9.0.0",
